--- a/.github/workflows/aquasense.yml
+++ b/.github/workflows/aquasense.yml
@@ -21,6 +21,14 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+      - name: Install Black
+        run: |
+          pip install black
+      - name: Check code formatting with Black
+        id: action_black
+        run: |
+          black .
+          
       - name: Run migrations
         run: |
           python manage.py migrate
