--- a/.github/workflows/aquasense.yml
+++ b/.github/workflows/aquasense.yml
@@ -19,8 +19,9 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: 
+          python -m pip install --upgrade pip
+          
       - name: Install Black
         run: |
             black .
@@ -31,11 +32,10 @@ jobs:
           black .
           
       - name: Run migrations
-        run: |
-          python manage.py migrate
+        run: python3 manage.py migrate
+        
       - name: Run tests
-        run: |
-          python manage.py test
+        run: python3 manage.py test
 
 
 
