--- a/.github/workflows/aquasense.yml
+++ b/.github/workflows/aquasense.yml
@@ -37,7 +37,9 @@ jobs:
       - name: Run tests
         run: python3 manage.py test
 
-
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
 
 
 
