--- a/.github/workflows/aquasense.yml
+++ b/.github/workflows/aquasense.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Run tests
         run: |
           python manage.py test
+      - name: Format code with black
+        run: |
+         black .
 
 
 
