--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -15,3 +15,18 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+      - name: Set up Git remote for Heroku
+        run: |
+          git remote -v
+          git remote add heroku https://git.heroku.com/aquasense.git || echo "Heroku remote already exists"
+      - name: Set Heroku buildpack
+        run: |
+          heroku buildpacks:set heroku/python -a aquasense
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.13.15
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: "aquasense"
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
