--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ django~=4.0
 python-dotenv~=0.19
 requests~=2.27     
 black==24.8.0
+whitenoise==6.7.0
+gunicorn==23.0.0
+psycopg2-binary==2.9.9
+dj-database-url==2.2.0
+django-cors-headers==4.4.0
+djangorestframework==3.15.2
+protobuf==3.12.4
