--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,10 +23,13 @@ jobs:
         run: |
           heroku buildpacks:set heroku/python -a aquasense
         env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}aquasense-project
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "aquasense"
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
+
+
+
