--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,15 @@ python-dotenv==1.0.1
 requests==2.32.3
 six==1.16.0
 sqlparse==0.5.1
+authlib~=1.0
+django~=4.0
+python-dotenv~=0.19
+requests~=2.27     
+black==24.8.0
+whitenoise==6.7.0
+gunicorn==23.0.0
+psycopg2-binary==2.9.9
 typing_extensions==4.12.2
 urllib3==2.2.3
 whitenoise==6.7.0
+protobuf==3.12.4
