--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ cffi==1.17.1
 charset-normalizer==3.3.2
 cryptography==43.0.1
 dj-database-url==2.2.0
-django==4.2.1
+Django==4.2.1
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
