--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           heroku buildpacks:set heroku/python -a aquasense
         env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}aquasense-project
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.13.15
         with:
